Wed Dec  5 11:42:38 2012  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_settracefunc.rb: disable trace.

Wed Dec  5 11:37:37 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#macro_defined?): use clearly different
	  strings from conflict markers.

Wed Dec  5 04:25:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* lib/README: Add rdoc modeline directive and formatting libs

Wed Dec  5 04:04:02 2012  Masaya Tarui  <tarui@ruby-lang.org>

	* test/ruby/test_thread.rb (test_async_interrupt_blocking): bugfix
	  about deferred check

Wed Dec  5 03:35:37 2012  Masaya Tarui  <tarui@ruby-lang.org>

	* vm_core.h (RUBY_VM_CHECK_INTS_BLOCKING): check async queue everytime.
	* thread.c (sleep_forever): check RUBY_VM_CHECK_INTS_BLOCKING first.
	* thread.c (sleep_timeval): ditto.
	* test/ruby/test_thread.rb (test_async_interrupt_blocking): add a test
	  exceptions are correctly deferred and raised on :on_blocking context.

Wed Dec  5 02:36:10 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk, defs/id.def, template/id.c.tmpl: generate id.c as well as id.h.

Wed Dec  5 00:56:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_mutex_owned_p): new method that return current
	  thread have the target mutex or not. [Feature #7505] [ruby-dev:46697]
	* test/ruby/test_thread.rb (test_mutex_owned, test_mutex_owned2):
	  test for the above.
	* NEWS: new for the above.

Wed Dec  5 00:05:47 2012  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (make_compiler, add_put_cmd, add_insert_cmd): extract
	  methods.

Tue Dec  4 18:21:04 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* test/ruby/memory_status.rb (Memory): use fiddle/types if available.

	* test/ruby/memory_status.rb (Memory::Win32): :stdcall is needed on
	  x86 WIN32. This commit partly reverts r38054.

Tue Dec  4 18:05:58 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* ext/fiddle/lib/fiddle/types.rb: copied from ext/dl/lib/dl/types.rb