@@ -9,7 +9,7 @@
 #
 #
 
-class Shell
+class Shell # :nodoc:
   @RELEASE_VERSION = "0.7"
   @LAST_UPDATE_DATE = "07/03/20"
 end
