@@ -1,3 +1,8 @@
+Wed Dec  5 11:55:00 2012  Zachary Scott  <zachary@zacharyscott.net>
+
+	* doc/shell.rd, doc/shell.rd.ja: Removed stale doc files
+	* lib/shell.rb, lib/shell/*: Merge and updates docs from doc/shell.rd*
+
 Wed Dec  5 11:42:38 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* test/ruby/test_settracefunc.rb: disable trace.
